mobile margin fix
On mobile, the logo was hugging the left side of the screen too close. This bumps it out slightly to line up with the content.

--- a/css/brewcoffeebar.css
+++ b/css/brewcoffeebar.css
@@ -377,6 +377,7 @@
 
 .brand {
   width: 140px;
+  margin-left: 16px;
 }
 
 @media (max-width: 991px) {
